--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     Single-Shot 3D Shape Reconstruction Using Structured Light and Deep Convolutional Neural Networks<br>
-                                    <span style="font-weight:bold;">H. Nguyen </span>, Y. Wang, and Z. Wang<br>
-                                    Sensors <span style="font-weight:bold;">20</span>(13), 3718, 2020<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, Y. Wang, and Z. Wang<br>
+                                    Sensors <span style="font-weight:bold;">20</span>(13), 3718, 2020.<br>
                                     [<a href="papers/Sensors_2020.pdf">pdf</a>] [<a href="https://arxiv.org/pdf/1909.07766.pdf">arXiv</a>] [<a href="#visual">video</a>] 
                                 </h7>
                             </div>
@@ -130,8 +130,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     Real-time 3D shape measurement using 3LCD projection and deep machine learning<br>
-                                    <span style="font-weight:bold;">H. Nguyen </span>, N. Dunne, H. Li, Y. Wang, and Z. Wang<br>
-                                    Applied optics <span style="font-weight:bold;">58</span>(26),  7100-7109, 2019<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, N. Dunne, H. Li, Y. Wang, and Z. Wang<br>
+                                    Applied optics <span style="font-weight:bold;">58</span>(26),  7100-7109, 2019.<br>
                                     [<a href="papers/AO_2019.pdf">pdf</a>] [<a href="#visual">video</a>]
                                 </h7>
                             </div>
@@ -144,8 +144,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     Demonstration of a laparoscopic structured-illumination three-dimensional imaging system for guiding reconstructive bowel anastomosis<br>
-                                    H. Le, <span style="font-weight:bold;"> H. Nguyen </span>, Z. Wang, J. Opfermann, S. Leonard, A. Krieger, and J. Kang<br>
-                                    Journal of Biomedical Optics <span style="font-weight:bold;">23</span>(5),  056009, 2018<br>
+                                    H. Le, <span style="font-weight:bold;">H. Nguyen</span>, Z. Wang, J. Opfermann, S. Leonard, A. Krieger, and J. Kang<br>
+                                    Journal of Biomedical Optics <span style="font-weight:bold;">23</span>(5),  056009, 2018.<br>
                                     [<a href="papers/JBO_2018.pdf">pdf</a>]
                                 </h7>
                             </div>
@@ -158,8 +158,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     Three-dimensional facial digitization using advanced digital image correlation<br>
-                                    <span style="font-weight:bold;"> H. Nguyen </span>, H. Kieu, Z. Wang, and H. Le<br>
-                                    Applied Optics <span style="font-weight:bold;">57</span>(9),  2188-2196, 2018<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, H. Kieu, Z. Wang, and H. Le<br>
+                                    Applied Optics <span style="font-weight:bold;">57</span>(9),  2188-2196, 2018.<br>
                                     [<a href="papers/AO_2018.pdf">pdf</a>]
                                 </h7>
                             </div>
@@ -172,8 +172,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     3D shape, deformation, and vibration measurements using infrared Kinect sensors and digital image correlation<br>
-                                    <span style="font-weight:bold;"> H. Nguyen </span>, Z. Wang, P. Jones and B. Zhao<br>
-                                    Applied Optics <span style="font-weight:bold;">56</span>(32),  9030-9037, 2017<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, Z. Wang, P. Jones and B. Zhao<br>
+                                    Applied Optics <span style="font-weight:bold;">56</span>(32),  9030-9037, 2017.<br>
                                     [<a href="papers/AO_2017.pdf">pdf</a>] [<a href="#visual">video</a>]
                                 </h7>
                             </div>
@@ -186,8 +186,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     Digital image correlation in experimental mechanics and image registration in computer vision: similarities, differences and complements<br>
-                                    Z. Wang, H. Kieu, <span style="font-weight:bold;">H. Nguyen </span>, and M. Le<br>
-                                    Optics and Lasers in Engineering <span style="font-weight:bold;">65</span>(1),  18-27, 2015<br>
+                                    Z. Wang, H. Kieu, <span style="font-weight:bold;">H. Nguyen</span>, and M. Le<br>
+                                    Optics and Lasers in Engineering <span style="font-weight:bold;">65</span>(1),  18-27, 2015.<br>
                                     [<a href="papers/OLEN_2015.pdf">pdf</a>]
                                 </h7>
                             </div>
@@ -200,8 +200,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     Real-time, high-accuracy 3D imaging and shape measurement<br>
-                                    <span style="font-weight:bold;">H. Nguyen </span>, D. Nguyen, Z. Wang, H. Kieu, and M. Le<br>
-                                    Applied Optics <span style="font-weight:bold;">54</span>(1),  A9-A17, 2015<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, D. Nguyen, Z. Wang, H. Kieu, and M. Le<br>
+                                    Applied Optics <span style="font-weight:bold;">54</span>(1),  A9-A17, 2015.<br>
                                     [<a href="papers/AO_2015.pdf">pdf</a>]
                                 </h7>
                             </div>
@@ -214,8 +214,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     Audio extraction from silent high-speed video using an optical technique<br>
-                                    Z. Wang, <span style="font-weight:bold;">H. Nguyen </span>, and J. Quisberth<br>
-                                    Optical Engineering <span style="font-weight:bold;">53</span>(11),  110502, 2014<br>
+                                    Z. Wang, <span style="font-weight:bold;">H. Nguyen</span>, and J. Quisberth<br>
+                                    Optical Engineering <span style="font-weight:bold;">53</span>(11),  110502, 2014.<br>
                                     [<a href="papers/OE_2014.pdf">pdf</a>]
                                 </h7>
                             </div>
@@ -228,8 +228,8 @@
                             <div class="col-sm-">
                                 <h7>
                                     Accurate 3D shape measurement of multiple separate objects with stereo vision<br>
-                                    H. Kieu, T. Pan, Z. Wang, M. Le, <span style="font-weight:bold;">H. Nguyen </span>, and M. Vo<br>
-                                    Measurement Science and Technology <span style="font-weight:bold;">25</span>(3), 035401, 2014<br>
+                                    H. Kieu, T. Pan, Z. Wang, M. Le, <span style="font-weight:bold;">H. Nguyen</span>, and M. Vo<br>
+                                    Measurement Science and Technology <span style="font-weight:bold;">25</span>(3), 035401, 2014.<br>
                                     [<a href="papers/MST_2014.pdf">pdf</a>]
                                 </h7>
                             </div>
