--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@
                 <section id="publication" class="two">
                     <div class="container">
                         <h3>Journals</h3><br />
+			    
+                        <div class="row">
+                            <div class="col-sm-">
+                                <img src="images/C10.jpg" alt="" height="96" width="96" />
+                            </div>
+                            <div class="col-sm-">
+                                <h7>
+                                    Accuracy Assessment of Fringe Projection Profilometry and Digital Image Correlation Techniques for Three-dimensional Shape Measurements<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, Jiali Liang, Y. Wang, and Z. Wang<br>
+                                    JPhys Photonics <span style="font-weight:bold;">, 2020 (submission).<br>
+                                </h7>
+                            </div>
+                        </div>    
 
                         <div class="row">
                             <div class="col-sm-">
