--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <h7>
                                     Accuracy Assessment of Fringe Projection Profilometry and Digital Image Correlation Techniques for Three-dimensional Shape Measurements<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, Jiali Liang, Y. Wang, and Z. Wang<br>
-                                    JPhys Photonics <span style="font-weight:bold;">, 2020 (submission).<br>
+                                    JPhys Photonics, 2020 (submission).<br>
                                 </h7>
                             </div>
                         </div>    
