--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@
                 <section id="publication" class="two">
                     <div class="container">
                         <h3>Journals</h3><br />
+			
+                        <div class="row">
+                            <div class="col-sm-">
+                                <img src="images/C11.png" alt="" height="96" width="96" />
+                            </div>
+                            <div class="col-sm-">
+                                <h7>
+                                    Three-dimensional Shape Reconstruction from Single-shot Speckle Image Using Deep Convolutional Neural Networks<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, Tan Tran, Y. Wang, and Z. Wang<br>
+                                    Optics and Lasers in Engineering, 2020 (submission).<br>
+                                </h7>
+                            </div>
+                        </div>     
 			    
                         <div class="row">
                             <div class="col-sm-">
