--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <div class="col-sm-">
                                 <h7>
                                     Three-dimensional Shape Reconstruction from Single-shot Speckle Image Using Deep Convolutional Neural Networks<br>
-                                    <span style="font-weight:bold;">H. Nguyen</span>, Tan Tran, Y. Wang, and Z. Wang<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, T. Tran, Y. Wang, and Z. Wang<br>
                                     Optics and Lasers in Engineering, 2020 (submission).<br>
                                 </h7>
                             </div>
@@ -129,7 +129,7 @@
                             <div class="col-sm-">
                                 <h7>
                                     Accuracy Assessment of Fringe Projection Profilometry and Digital Image Correlation Techniques for Three-dimensional Shape Measurements<br>
-                                    <span style="font-weight:bold;">H. Nguyen</span>, Jiali Liang, Y. Wang, and Z. Wang<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, J. Liang, Y. Wang, and Z. Wang<br>
                                     JPhys Photonics, 2020 (submission).<br>
                                 </h7>
                             </div>
