--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <h7>
                                     Accuracy Assessment of Fringe Projection Profilometry and Digital Image Correlation Techniques for Three-dimensional Shape Measurements<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, J. Liang, Y. Wang, and Z. Wang<br>
-                                    JPhys Photonics, 2020 (provisional acceptance).<br>
+                                    JPhys Photonics, 2020.<br>
                                 </h7>
                             </div>
                         </div>    
