--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
                     <div class="container">
                         <h3>Journals</h3><br />
 			
+			<div class="row">
+                            <div class="col-sm-">
+                                <img src="images/C11.png" alt="" height="96" width="96" />
+                            </div>
+                            <div class="col-sm-">
+                                <h7>
+                                    Miniaturization of Transcranial Magnetic Stimulator Power Unit Based on Printed Circuit Board Design<br>
+                                    Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>, H. Song, Q. Li, Y. Yang, J. Wang, and H. Lu <br>
+                                    Brain Stimulation, 2021 (in preparation).<br>
+                                </h7>
+                            </div>
+                        </div>      
+			    
                         <div class="row">
                             <div class="col-sm-">
                                 <img src="images/C11.png" alt="" height="96" width="96" />
@@ -117,7 +130,7 @@
                                 <h7>
                                     Three-dimensional Shape Reconstruction from Single-shot Speckle Image Using Deep Convolutional Neural Networks<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, T. Tran, Y. Wang, and Z. Wang<br>
-                                    Optics and Lasers in Engineering, 2020 (submission).<br>
+                                    Optics and Lasers in Engineering, 2021 (under review).<br>
                                 </h7>
                             </div>
                         </div>     
@@ -130,7 +143,7 @@
                                 <h7>
                                     Accuracy Assessment of Fringe Projection Profilometry and Digital Image Correlation Techniques for Three-dimensional Shape Measurements<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, J. Liang, Y. Wang, and Z. Wang<br>
-                                    JPhys Photonics, 2020.<br>
+                                    JPhys Photonics, 2021 (In Press).<br>
                                 </h7>
                             </div>
                         </div>    
