--- a/index.html
+++ b/index.html
@@ -86,14 +86,13 @@
                                 <h3>Research Interest</h3>
                                 <h6>
                                     <br />
-                                    My research interest includes different perspectives in 3D shape reconstruction and resting-state fMRI (rs-fMRI). The main goal is to develop the 3D shape, deformation,
-                                    and vibration measurement system using the stereo-vision-based techniques. Currently, I am developing various deep learning methods to classify the disorder disease
-                                    based on rs-fMRI time-course. <br /> <br />
+                                    My research interest includes different perspectives in 3D shape reconstruction and neuroimaging. The main goal is to develop the 3D shape, deformation,
+                                    and vibration measurement system using the stereo-vision-based techniques. Currently, I am developing various machine learning and deep learning methods to neuroimaging modalities. <br /> <br />
                                     <ul>
                                         <li>Real-time, high-accuracy 3D imaging and shape measurement</li>
                                         <li>Camera and depth sensors</li>
                                         <li>Transcranial Magnetic Stimulation (TMS) control</li>
-                                        <li>Resting state functional magnetic resonance imaging (rs-FMRI)</li>
+                                        <li>Magnetic resonance imaging (MRI)</li>
                                     </ul>
                                 </h6>
 
@@ -111,7 +110,7 @@
 			
 			<div class="row">
                             <div class="col-sm-">
-                                <img src="images/C11.png" alt="" height="96" width="96" />
+                                <img src="images/C12.png" alt="" height="96" width="96" />
                             </div>
                             <div class="col-sm-">
                                 <h7>
