--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                             </div>
                             <div class="col-sm-">
                                 <h7>
-                                    Miniaturization of Transcranial Magnetic Stimulator Power Unit Based on Printed Circuit Board Design<br>
+				    Flexible Control of TMS Pulse Parameters Based on Printed Circuit Board Design<br>
                                     Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>, H. Song, Q. Li, Y. Yang, J. Wang, and H. Lu <br>
-                                    Brain Stimulation, 2021 (in preparation).<br>
+                                    Brain Stimulation, 2021 (submission).<br>
                                 </h7>
                             </div>
                         </div>      
