--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@
                     <div class="container">
                         <h3>Journals</h3><br />
 			
+                        <div class="row">
+                            <div class="col-sm-">
+                                <img src="images/C13.png" alt="" height="96" width="96" />
+                            </div>
+                            <div class="col-sm-">
+                                <h7>
+                                    hNet: Single-shot 3D shape reconstruction using structured light and h-shaped global guidance network<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Tran, Y. Wang, and Z. Wang<br>
+                                    Results in Optics, 2021 (in preparation).<br>
+                                </h7>
+                            </div>
+                        </div>			    
+			    
 			<div class="row">
                             <div class="col-sm-">
                                 <img src="images/C12.png" alt="" height="96" width="96" />
