--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                                 <h7>
                                     Accuracy Assessment of Fringe Projection Profilometry and Digital Image Correlation Techniques for Three-dimensional Shape Measurements<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, J. Liang, Y. Wang, and Z. Wang<br>
-                                    JPhys Photonics, 2021 (In Press).<br>
+                                    J. Phys. Photonics <span style="font-weight:bold;">3</span>, 014004, 2021.<br>
+				    [<a href="https://iopscience.iop.org/article/10.1088/2515-7647/abcbe4/pdf">pdf</a>]		
                                 </h7>
                             </div>
                         </div>    
