--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <h7>
                                     hNet: Single-shot 3D shape reconstruction using structured light and h-shaped global guidance network<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Tran, Y. Wang, and Z. Wang<br>
-                                    Results in Optics, 2021 (in preparation).<br>
+                                    Results in Optics, 2021 (submission).<br>
                                 </h7>
                             </div>
                         </div>			    
@@ -129,7 +129,7 @@
                                 <h7>
 				    Flexible Control of TMS Pulse Parameters Based on Printed Circuit Board Design<br>
                                     Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>, H. Song, Q. Li, Y. Yang, J. Wang, and H. Lu <br>
-                                    Brain Stimulation, 2021 (submission).<br>
+                                    Brain Stimulation, 2021 (under review).<br>
                                 </h7>
                             </div>
                         </div>      
