--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="row">
                             <div class="col-md-">
                                 <h6>
-                                    I am currently a postdoctoral research fellow at Neuroimaging Research Branch, NIDA, NIH. Previously, I was a graduate research assistant at Experimental Mechanics and Computer Vision (EMCV) Lab,
+                                    I am currently a postdoctoral research fellow at Neuroimaging Research Branch, NIDA IRP, NIH. Previously, I was a graduate research assistant at Experimental Mechanics and Computer Vision (EMCV) Lab,
                                     Catholic University of America where I worked under the supervision of <a href="https://sites.google.com/cardinalmail.cua.edu/wangz/">Dr. Zhaoyang Wang</a> on the high-accuracy, real-time 3D imaging and shape reconstruction systems. Before that, I received B.E.
                                     and M.Sc. in Electrical Engineering Department, Catholic University of America. <br /> <br />
                                 </h6>
@@ -116,7 +116,7 @@
                                 <h7>
                                     hNet: Single-shot 3D shape reconstruction using structured light and h-shaped global guidance network<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Tran, Y. Wang, and Z. Wang<br>
-                                    Results in Optics, 2021 (submission).<br>
+                                    Results in Optics, 2021 (under review).<br>
                                 </h7>
                             </div>
                         </div>			    
