--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
                 <section id="publication" class="two">
                     <div class="container">
 			
-
+			<h3>Papers in preparation</h3><br/>    
+			<h7>
+			    <ol>
+				<li>MIMONet: Structured-light 3D shape reconstruction via multiple-input multiple-output network</li>
+				<li>Flexible Control of TMS Pulse Parameters Based on Printed Circuit Board Design</li>
+			    </ol>
+			<h7>
 				    
                         <h3>Papers under review</h3><br/>
 			
