--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                                 <h7>
                                     Three-dimensional Shape Reconstruction from Single-shot Speckle Image Using Deep Convolutional Neural Networks<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, T. Tran, Y. Wang, and Z. Wang<br>
-                                    Optics and Lasers in Engineering, 2021 (accepted).<br>
+                                    Optics and Lasers in Engineering <span style="font-weight:bold;">143</span>, 106639, 2021.<br> 
+				    [<a href="https://www.sciencedirect.com/science/article/pii/S0143816621001093">pdf</a>]
                                 </h7>
                             </div>
                         </div>    
