--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
 			    
 			<div class="row">
                             <div class="col-sm-">
+                                <img src="images/Under_review.png" alt="" height="96" width="96" />
+                            </div>
+                            <div class="col-sm-">
+                                <h7>
+                                    Accurate 3D shape reconstruction from single structured-light image via fringe-to-fringe network<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span> and Z. Wang<br>
+                                    Optics Letters, 2021 (under review).<br>
+                                </h7>
+                            </div>
+                        </div>   
+			    			    
+			<div class="row">
+                            <div class="col-sm-">
                                 <img src="images/C14.png" alt="" height="96" width="96" />
                             </div>
                             <div class="col-sm-">
