--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                                 <h7>
                                     MIMONet: Structured-light 3D shape reconstruction via multi-input multi-output network<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Nguyen, Y. Wang, and Z. Wang<br>
-                                    Applied Optics, 2021 (in press).<br>
+				    Applied Optics <span style="font-weight:bold;">60</span>, 5134-5144, 2021.<br>
+				    [<a href="https://www.osapublishing.org/ao/fulltext.cfm?uri=ao-60-17-5134">pdf</a>]
                                 </h7>
                             </div>
                         </div>       
