--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             </div>
                             <div class="col-sm-">
                                 <h7>
-                                    MIMONet: Structured-light 3D shape reconstruction via multi-input multi-output network<br>
+                                    MIMONet: Structured-light 3D shape reconstruction by a multi-input multi-output network<br>
                                     <span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Nguyen, Y. Wang, and Z. Wang<br>
 				    Applied Optics <span style="font-weight:bold;">60</span>, 5134-5144, 2021.<br>
 				    [<a href="https://www.osapublishing.org/ao/fulltext.cfm?uri=ao-60-17-5134">pdf</a>]
