--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <div class="col-sm-">
                                 <h7>
                                     Accurate 3D object reconstruction<br>
-                                    <span style="font-weight:bold;">H. Nguyen</span> and Z. Wang<br>
+                                    <span style="font-weight:bold;">H. Nguyen</span>, Erin Novak and Z. Wang<br>
                                     Measurement, 2021 (under review).<br>
                                 </h7>
                             </div>
