--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 ﻿<!DOCTYPE HTML>
 <!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Miniport
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Hieu Nguyen's homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -50,7 +48,7 @@
                     <div class="row">
                         <div class="col-md-">
                             <h6>
-                                I am an Electrical Engineering and Postdoctoral Research Fellow at Neuroimaging Research Branch, NIDA-IRP, NIH. Previously, I was a graduate research assistant at Experimental Mechanics and Computer Vision (EMCV) Labs,
+                                I am an Electrical Engineer and Postdoctoral Research Fellow at Neuroimaging Research Branch, NIDA-IRP, NIH. Previously, I was a graduate research assistant at Experimental Mechanics and Computer Vision (EMCV) Labs,
                                 Catholic University of America where I worked under the supervision of <a href="https://sites.google.com/cardinalmail.cua.edu/wangz/">Dr. Zhaoyang Wang</a> on the high-accuracy, real-time 3D imaging and shape reconstruction systems. Before that, I received B.E.
                                 and M.Sc. in Electrical Engineering Department, Catholic University of America. <br /> <br />
                             </h6>
