--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <div class="row">
                         <div class="col-md-">
                             <h6>
-                                I am an Electrical Engineer and Postdoctoral Research Fellow at Neuroimaging Research Branch, NIDA-IRP, NIH. Previously, I was a graduate research assistant at Experimental Mechanics and Computer Vision (EMCV) Labs,
-                                Catholic University of America where I worked under the supervision of <a href="https://sites.google.com/cardinalmail.cua.edu/wangz/">Dr. Zhaoyang Wang</a> on the high-accuracy, real-time 3D imaging and shape reconstruction systems. Before that, I received B.E.
+                                I am an Electrical Engineer and Postdoctoral Research Fellow at Neuroimaging Research Branch, NIDA-IRP, NIH. Before, I was a graduate student at Experimental Mechanics and Computer Vision (EMCV) Labs,
+                                Catholic University of America where I worked under the supervision of <a href="https://sites.google.com/cardinalmail.cua.edu/wangz/">Dr. Zhaoyang Wang</a> on 3D imaging systems. Meanwhile, I received B.E.
                                 and M.Sc. in Electrical Engineering Department, Catholic University of America. <br /> <br />
                             </h6>
                         </div>
