--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h2>Journals</h2><br />
                         <h7>
                             <ol>
-				<li><span style="font-weight:bold;">H. Nguyen</span> and Z. Wang, "Accurate 3D shape reconstruction from single structured-light image via fringe-to-fringe network," <em>Photonics</em> 2021 (in press).</li>
+				<li><span style="font-weight:bold;">H. Nguyen</span> and Z. Wang, "Accurate 3D shape reconstruction from single structured-light image via fringe-to-fringe network," <em>Photonics</em>, 2021 (in press).</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Nguyen, Y. Wang, and Z. Wang, "<a href="https://doi.org/10.1364/AO.426189">MIMONet: Structured-light 3D shape reconstruction by a multi-input multi-output network</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">60</span>, 5134-5144, 2021.</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Tran, Y. Wang, and Z. Wang, "<a href="https://doi.org/10.1016/j.rio.2021.100104">hNet: Single-shot 3D shape reconstruction using structured light and h-shaped global guidance network</a>,"  <em>Results in Optics</em> <span style="font-weight:bold;">4</span>, 100104, 2021.</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, T. Tran, Y. Wang, and Z. Wang, "<a href="https://doi.org/10.1016/j.optlaseng.2021.106639">Three-dimensional Shape Reconstruction from Single-shot Speckle Image Using Deep Convolutional Neural Networks</a>,"  <em>Opt. Lasers Eng.</em> <span style="font-weight:bold;">143</span>, 106639, 2021.</li>
