--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <h2>Conferences</h2><br />
                         <h7>
                             <ol>
+				<li>A. Vrana, S. Baldwin, Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>, Y. Yang, and H. Lu, "Developing a robust awake rat model for mechanistic study of TMS effects with a focused coil", 4th International Brain Stimulation Conference, Charleston, South Carolina (2021).</li>    
                                 <li>H. Le, <span style="font-weight:bold;">H. Nguyen</span>, Z. Wang, et al, "An endoscopic 3D structured illumination imaging system for robotic anastomosis surgery (Conference Presentation)", SPIE BIOS Advanced Biomedical and Clinic Diagnostic and Surgical Guidance Systems XVI, San Francisco (2018).</li>
                                 <li>Z. Wang and <span style="font-weight:bold;">H. Nguyen</span>, “3D shape measurement using image-matching-based techniques,” 2017 SPIE Commercial + Scientific Sensing and Imaging, Anaheim, California, Apr 9-13, 2017.</li>
                                 <li>H. Le, <span style="font-weight:bold;">H. Nguyen</span>, Z. Wang, and J. Kang, "A demonstration of structured-illumination-based technique using commercial surgical endoscope", CLEO: Applications and Technology, 2017.</li>
