--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, H. Kieu, M. Le, and Z. Wang, “Fast-speed, high-accuracy and real-time 3D imaging with fringe projection technique,” 2014 SEM Annual Conference and Exposition on Experimental and Applied Mechanics, Greenville, South Carolina, June 2-5, 2014.</li>
                             </ol>
                         <h7>
+                    <h2>Patents</h2><br />
+                        <h7>
+                            <ol>
+				<li>"PROTOCOL TO ENHANCE THERAPEUTIC EFFECTS OF TRANSCRANIAL MAGNETIC STIMULATION," U.S. Patent Application No. 63/286,229, filed December 6, 2021. (Patent Pending)</li>
+                            </ol>
+                        <h7>
                 </div>
 			</article>
 
