--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
                                 Email: hieu.nguyen at nih dot gov<br />
                                 <a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a> <br />  <br /> <br />
+				    
+				"Engineering: it does not matter the way you find solutions."
                             </h4>
                         </div>
                     </div>
