--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h2>Journals</h2><br />
                         <h7>
                             <ol>
-				<li><span style="font-weight:bold;">H. Nguyen</span>, E. Novak, and Z. Wang, "Accurate 3D reconstruction via fringe-to-phase network," <em>Measurement</em>, 2022.</li>
+				<li><span style="font-weight:bold;">H. Nguyen</span>, E. Novak, and Z. Wang, "<a href="https://doi.org/10.1016/j.measurement.2021.110663">Accurate 3D reconstruction via fringe-to-phase network</a>," <em>Measurement</em>, 2022.</li>
 				<li><span style="font-weight:bold;">H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.3390/photonics8110459">Accurate 3D Shape Reconstruction from Single Structured-Light Image via Fringe-to-Fringe Network</a>," <em>Photonics</em> <span style="font-weight:bold;">8</span>, 459, 2021.</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Nguyen, Y. Wang, and Z. Wang, "<a href="https://doi.org/10.1364/AO.426189">MIMONet: Structured-light 3D shape reconstruction by a multi-input multi-output network</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">60</span>, 5134-5144, 2021.</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Tran, Y. Wang, and Z. Wang, "<a href="https://doi.org/10.1016/j.rio.2021.100104">hNet: Single-shot 3D shape reconstruction using structured light and h-shaped global guidance network</a>,"  <em>Results in Optics</em> <span style="font-weight:bold;">4</span>, 100104, 2021.</li>
