--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                                 <small>Baltimore, MD 21224</small> <br /> <br />
 
                                 Email: hieu.nguyen at nih dot gov<br />
-                                <a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a> <br />  
-				"Engineering: it does not matter the way you find solutions." <br /> <br />
+                                <a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a> <br /><br />  
+				
                             </h4>
                         </div>
                     </div>
